updated to CustomerDto
